# HeRD

./: .gitignore  BaseOfGiantBranch_8cpp.html  BaseOfGiantBranch_8cpp__incl.map  BaseOfGiantBranch_8cpp__incl.md5  BaseOfGiantBranch_8h.html  BaseOfGiantBranch_8h__dep__incl.map  BaseOfGiantBranch_8h__dep__incl.md5  BaseOfGiantBranch_8h__incl.map  BaseOfGiantBranch_8h__incl.md5  BaseOfGiantBranch_8h_source.html  CMakeLists.txt  ComputeZAMS_8cpp.html  ComputeZAMS_8cpp.js  ComputeZAMS_8cpp__incl.map  ComputeZAMS_8cpp__incl.md5  Constants_8h.html  Constants_8h.js  Constants_8h__dep__incl.map  Constants_8h__dep__incl.md5  Constants_8h_source.html  ConvectiveEnvelopeUnitTests_8cpp.html  ConvectiveEnvelopeUnitTests_8cpp.js  ConvectiveEnvelopeUnitTests_8cpp__incl.map  ConvectiveEnvelopeUnitTests_8cpp__incl.md5  ConvectiveEnvelope_8cpp.html  ConvectiveEnvelope_8cpp__incl.map  ConvectiveEnvelope_8cpp__incl.md5  ConvectiveEnvelope_8h.html  ConvectiveEnvelope_8h__dep__incl.map  ConvectiveEnvelope_8h__dep__incl.md5  ConvectiveEnvelope_8h__incl.map  ConvectiveEnvelope_8h__incl.md5  ConvectiveEnvelope_8h_source.html  CriticalMassValuesUnitTests_8cpp.html  CriticalMassValuesUnitTests_8cpp.js  CriticalMassValuesUnitTests_8cpp__incl.map  CriticalMassValuesUnitTests_8cpp__incl.md5  CriticalMassValues_8cpp.html  CriticalMassValues_8cpp.js  CriticalMassValues_8cpp__incl.map  (+886 more)
CMake/: AddInstallTargetCommon.cmake  AddLibraryCommon.cmake
Config/: Herd.bib  Herd.imp  cppcheckSuppress.xml
cmake/: HerdConfigureCodeCoverage.cmake  HerdConfigureCompilerAndLinker.cmake  HerdConfigureDoxygen.cmake  HerdConfigureInstrumentation.cmake  HerdConfigureStaticCheckers.cmake  HerdConfigureUnitTests.cmake  HerdCreateLibrary.cmake  HerdCreateTarget.cmake  HerdFlagsClang.cmake  HerdFlagsGNU.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  (+80 more)
src/: CMakeLists.txt
src/ComputeZAMS/: CMakeLists.txt  ComputeZAMS.cpp
src/Concepts/: CMakeLists.txt  GenericConcepts.h
src/Exceptions/: CMakeLists.txt  Exception.h  ExceptionWrappers.cpp  ExceptionWrappers.h  PreconditionError.cpp  PreconditionError.h  RuntimeError.h
src/Exceptions/UnitTests/: CMakeLists.txt  ExceptionWrappersUnitTests.cpp  PreconditionErrorUnitTests.cpp  TestExceptions.cpp
src/Generic/: CMakeLists.txt  MathHelpers.cpp  MathHelpers.h  Quantities.h  Quantity.cpp  Quantity.h  QuantityRange.cpp  QuantityRange.h
src/Generic/UnitTests/: CMakeLists.txt  MathHelpersUnitTests.cpp  QuantityAndRangeUnitTests.cpp  QuantityRangeUnitTests.cpp  QuantityUnitTests.cpp  TestGeneric.cpp
src/Physics/: CMakeLists.txt  Constants.h  LuminosityRadiusTemperature.cpp  LuminosityRadiusTemperature.h
src/Physics/UnitTests/: CMakeLists.txt  FormulasUnitTests.cpp  LuminosityRadiusTemperatureUnitTests.cpp  TestPhysics.cpp
src/SSE/: BaseOfGiantBranch.cpp  BaseOfGiantBranch.h  CMakeLists.txt  Constants.h  ConvectiveEnvelope.cpp  ConvectiveEnvelope.h  EvolutionStage.cpp  EvolutionStage.h  EvolutionStages.cpp  EvolutionStages.h  EvolutionState.cpp  EvolutionState.h  GiantBranchRadius.cpp  GiantBranchRadius.h  IPhase.h  MainSequence.cpp  MainSequence.h  MathHelpers.cpp  MathHelpers.h  RgComputer.cpp  RgComputer.h  SingleStarEvolution.cpp  SingleStarEvolution.h  Star.h  StarState.h  StellarRotation.cpp  StellarRotation.h  StellarWindMassLoss.cpp  StellarWindMassLoss.h  TerminalMainSequence.cpp  TerminalMainSequence.h  TrackPoint.cpp  TrackPoint.h  ZeroAgeMainSequence.cpp  ZeroAgeMainSequence.h
src/SSE/Landmarks/: BaseOfGiantBranch.cpp  BaseOfGiantBranch.h  CMakeLists.txt  CriticalMassValues.cpp  CriticalMassValues.h  GiantBranchRadius.cpp  GiantBranchRadius.h  HeliumIgnition.cpp  HeliumIgnition.h  ILandmark.h  TerminalMainSequence.cpp  TerminalMainSequence.h  Utilities.h  Utilities.hpp  ZeroAgeMainSequence.cpp  ZeroAgeMainSequence.h
src/SSE/Landmarks/UnitTests/: CMakeLists.txt  CriticalMassValuesUnitTests.cpp  GiantBranchRadiusUnitTests.cpp  LandmarkUnitTests.cpp  TestLandmarks.cpp
src/SSE/UnitTests/: CMakeLists.txt  ConvectiveEnvelopeUnitTests.cpp  EvolutionStageUnitTests.cpp  EvolutionStateUnitTests.cpp  PhaseUnitTests.cpp  RgComputerUnitTests.cpp  SSETestDataManager.cpp  SSETestDataManager.h  SSETestUtils.cpp  SSETestUtils.h  SingleStarEvolutionUnitTests.cpp  StellarRotationUnitTests.cpp  StellarWindMassLossUnitTests.cpp  TestSSE.cpp  TrackPointUnitTests.cpp  ZeroAgeMainSequenceUnitTests.cpp
src/SSE/UnitTests/Data/: ZAMS.trackpoints.xml  ZAMSUnitTestDataMIST.xml  ZAMSUnitTestDataSSE.xml
src/SSE/UnitTests/Data/EvolutionaryTracks/: 0.5_0.0001.track.xml  0.5_0.0003.track.xml  0.5_0.001.track.xml  0.5_0.004.track.xml  0.5_0.01.track.xml  0.5_0.02.track.xml  0.5_0.03.track.xml  0.64_0.0001.track.xml  0.64_0.0003.track.xml  0.64_0.001.track.xml  0.64_0.004.track.xml  0.64_0.01.track.xml  0.64_0.02.track.xml  0.64_0.03.track.xml  0.8_0.0001.track.xml  0.8_0.0003.track.xml  0.8_0.001.track.xml  0.8_0.004.track.xml  0.8_0.01.track.xml  0.8_0.02.track.xml  0.8_0.03.track.xml  0.9_0.0001.track.xml  0.9_0.0003.track.xml  0.9_0.001.track.xml  0.9_0.004.track.xml  0.9_0.01.track.xml  0.9_0.02.track.xml  0.9_0.03.track.xml  1.12_0.0001.track.xml  1.12_0.0003.track.xml  1.12_0.001.track.xml  1.12_0.004.track.xml  1.12_0.01.track.xml  1.12_0.02.track.xml  1.12_0.03.track.xml  1.25_0.0001.track.xml  1.25_0.0003.track.xml  1.25_0.001.track.xml  1.25_0.004.track.xml  1.25_0.01.track.xml  (+136 more)
src/SSE/UnitTests/Scripts/: DataGeneratorSSE.py  RunSSE.py  SSEHelpers.py  TrackGenereratorSSE.py  ZAMSDataGeneratorSSE.py  ZAMSExtractor.py  ZAMSExtractorMIST.py
src/UnitTestUtils/: CMakeLists.txt  DataLoaderFixture.cpp  DataLoaderFixture.h  RandomTestFixture.cpp  RandomTestFixture.h  UnitTestUtilityFunctions.cpp  UnitTestUtilityFunctions.h
src/UnitTestUtils/UnitTests/: CMakeLists.txt  RandomTestFixtureTests.cpp  RandomTestFixtureUnitTests.cpp  TestUnitTestUtils.cpp
(+10 files in other folders)
